# mujoco_RGBD

./: .gitignore  CMakeLists.txt
include/: mujoco_rgbd_camera.hpp
src/: two_window.cpp
